--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -25,6 +25,8 @@ jobs:
           version: latest
           
       - name: Install kubelogin
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: azure/use-kubelogin@v1
         with:
           kubelogin-version: 'latest'
