--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -33,7 +33,16 @@ jobs:
                 
       - name: Set AKS context
         run: |
-          az aks get-credentials --resource-group autio-web --name test-k8 --overwrite-existing        
+          az aks get-credentials --resource-group autio-web --name test-k8 --overwrite-existing  
+          
+      - name: Apply ASO manifests
+        run: |
           kubectl apply -f workflows/aso.yml
+          
+      - name: Verify ASO Resources
+        run: |
           kubectl get all -n default
+        
+      - name: Wait for resources to be ready
+        run: |
           kubectl wait --for=condition=Ready sqldatabase/test-db
