--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -23,29 +23,35 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: latest
-          
-      - name: Install kubelogin
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        uses: azure/use-kubelogin@v1
-        with:
-          kubelogin-version: 'latest'
-                
       - name: Set AKS context
         run: |
           az aks get-credentials --resource-group autio-web --name test-k8 --overwrite-existing  
+          az aks install-cli
           
+      - name: Install Helm
+        run: |
+          curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+          
+      - name: Install ASO using Helm
+        run: |
+          helm repo add aso2 https://azure.github.io/azure-service-operator
+          helm repo update
+          helm install azure-service-operator aso2/azure-service-operator \
+            --create-namespace \
+            --namespace aso-system \
+            --set crds.enabled=true \
+            --set azure.subscriptionID=${{ secrets.AZURE_SUBSCRIPTION_ID }} \
+            --set azure.tenantID=${{ secrets.AZURE_TENANT_ID }} \
+            --set azure.clientID=${{ secrets.AZURE_CLIENT_ID }} \
+            --set azure.clientSecret=${{ secrets.AZURE_CLIENT_SECRET }}
+            
       - name: Apply ASO manifests
         run: |
           kubectl apply -f workflows/aso.yml
           
       - name: Verify ASO Resources
         run: |
-          kubectl get all -n default
+          kubectl get all -n azure-resources
         
       - name: Wait for resources to be ready
         run: |
