--- a/workflows/aso.yml
+++ b/workflows/aso.yml
@@ -1,8 +1,17 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: azure-resources
+  labels:
+    name: azure-resources
+    
+---
+
 apiVersion: resources.azure.com/v1api20200601
 kind: ResourceGroup
 metadata:
   name: autio-web
-  namespace: default
+  namespace: azure-resources
 spec:
   location: canadacentral
   tags:
@@ -14,7 +23,7 @@ apiVersion: documentdb.azure.com/v1api20231115
 kind: DatabaseAccount
 metadata:
   name: autio-cosmos-db
-  namespace: default
+  namespace: azure-resources
 spec:
   location: canadacentral
   owner:
@@ -37,7 +46,7 @@ apiVersion: documentdb.azure.com/v1api20231115
 kind: SqlDatabase
 metadata:
   name: test-db
-  namespace: default
+  namespace: azure-resources
 spec:
   location: canadacentral
   owner:
