--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -34,7 +34,7 @@ jobs:
           
       - name: Install ASO using Helm
         run: |
-          helm repo add aso2 https://azure.github.io/azure-service-operator
+          helm repo add aso2 https://raw.githubusercontent.com/Azure/azure-service-operator/main/v2/charts
           helm repo update
           helm install azure-service-operator aso2/azure-service-operator \
             --create-namespace \
@@ -44,6 +44,7 @@ jobs:
             --set azure.tenantID=${{ secrets.AZURE_TENANT_ID }} \
             --set azure.clientID=${{ secrets.AZURE_CLIENT_ID }} \
             --set azure.clientSecret=${{ secrets.AZURE_CLIENT_SECRET }}
+            --set crdPattern='resources.azure.com/*;containerservice.azure.com/*;keyvault.azure.com/*;managedidentity.azure.com/*;eventhub.azure.com/*;documentdb.azure.com/*'
             
       - name: Apply ASO manifests
         run: |
