--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -33,6 +33,11 @@ jobs:
           curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
           
       - name: Install ASO using Helm
+        env:
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
         run: |
           helm repo add aso2 https://raw.githubusercontent.com/Azure/azure-service-operator/main/v2/charts
           helm repo update
@@ -40,10 +45,6 @@ jobs:
             --create-namespace \
             --namespace aso-system \
             --set crds.enabled=true \
-            --set azure.subscriptionID=${{ secrets.AZURE_SUBSCRIPTION_ID }} \
-            --set azure.tenantID=${{ secrets.AZURE_TENANT_ID }} \
-            --set azure.clientID=${{ secrets.AZURE_CLIENT_ID }} \
-            --set azure.clientSecret=${{ secrets.AZURE_CLIENT_SECRET }}
             --set crdPattern='resources.azure.com/*;containerservice.azure.com/*;keyvault.azure.com/*;managedidentity.azure.com/*;eventhub.azure.com/*;documentdb.azure.com/*'
             
       - name: Apply ASO manifests
