--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -28,16 +28,8 @@ jobs:
           az aks get-credentials --resource-group autio-web --name test-k8 --overwrite-existing  
           az aks install-cli
           
-      - name: Install Helm
-        run: |
-          curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
-          
-      - name: Set Azure environment variables for Helm
-        run: |
-          export AZURE_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          export AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}
-          export AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}
-          export AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}
+      - name: Helm tool installer
+        uses: Azure/setup-helm@v4
           
       - name: Install ASO using Helm
         env:
