--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -32,20 +32,20 @@ jobs:
         uses: Azure/setup-helm@v4
         
       - name: Set SECRETS in AKS
-        run: 
-        - |
-          cat <<EOF | kubectl apply -f -                                                                               
-            apiVersion: v1
-            kind: Secret
-            metadata:
-              name: aso-credential
-              namespace: default
-            stringData:
-              AZURE_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-              AZURE_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
-              AZURE_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
-              AZURE_CLIENT_SECRET: "${{ AZURE_CLIENT_SECRET }}"
-              EOF
+        script: 
+          - |
+            cat <<EOF | kubectl apply -f -                                                                               
+              apiVersion: v1
+              kind: Secret
+              metadata:
+                name: aso-credential
+                namespace: default
+              stringData:
+                AZURE_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+                AZURE_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
+                AZURE_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
+                AZURE_CLIENT_SECRET: "${{ AZURE_CLIENT_SECRET }}"
+                EOF
 
       - name: Install ASO using Helm
         run: |
