--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -30,21 +30,6 @@ jobs:
           
       - name: Helm tool installer
         uses: Azure/setup-helm@v4
-        
-      - name: Set SECRETS in AKS
-        run: | 
-          cat <<EOF | kubectl apply -f -                                                                               
-            apiVersion: v1
-            kind: Secret
-            metadata:
-              name: aso-credential
-              namespace: default
-            stringData:
-              AZURE_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-              AZURE_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
-              AZURE_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
-              AZURE_CLIENT_SECRET: "${{ AZURE_CLIENT_SECRET }}"
-              EOF
 
       - name: Install ASO using Helm
         run: |
@@ -54,6 +39,10 @@ jobs:
             --create-namespace \
             --namespace aso-system \
             --set crds.enabled=true \
+            --set azureSubscriptionID=${{secrets.AZURE_SUBSCRIPTION_ID}}
+            --set azureTenantID=${{secrets.AZURE_TENANT_ID}}
+            --set azureClientID=${{secrets.AZURE_CLIENT_ID}}
+            --set azureClientSecret=${{secrets.AZURE_CLIENT_SECRET}}
             --set crdPattern='resources.azure.com/*;containerservice.azure.com/*;keyvault.azure.com/*;managedidentity.azure.com/*;eventhub.azure.com/*;documentdb.azure.com/*'
             
       - name: Apply ASO manifests
