--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           resource-group: 'autio-web'
           cluster-name: 'test-k8'
+          admin: true
           
       - name: Set up kubelogin for non-interactive login
         uses: azure/use-kubelogin@v1
