--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -32,7 +32,7 @@ jobs:
           
       - name: Set AKS context
         run: |
-          az aks get-credentials --resource-group autio-web --name test-k8 --overwrite-existing
+          az aks get-credentials --resource-group autio-web --name test-k8
           
       - name: Test
         run: |
