--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -22,6 +22,10 @@ jobs:
         run: |
           az login --service-principal --username ${{ secrets.AZURE_CLIENT_ID }} --password ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
 
+      - name: Ensure proper contect
+        run: |
+          kubectl config get-contexts 
+          
       - name: Set up kubelogin for non-interactive login
         uses: azure/use-kubelogin@v1
         env:
