--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -21,10 +21,6 @@ jobs:
       - name: Login to Azure
         run: |
           az login --service-principal --username ${{ secrets.AZURE_CLIENT_ID }} --password ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
-
-      - name: Ensure proper contect
-        run: |
-          kubectl config get-contexts 
           
       - name: Set up kubelogin for non-interactive login
         uses: azure/use-kubelogin@v1
@@ -36,6 +32,10 @@ jobs:
       - name: Set AKS context
         run: |
           az aks get-credentials --resource-group autio-web --name test-k8
+          
+      - name: Ensure proper context
+        run: |
+          kubectl config get-contexts 
           
       - name: Test
         run: |
