--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -19,11 +19,11 @@ jobs:
           az login --service-principal --username ${{ secrets.AZURE_CLIENT_ID }} --password ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
 
       - name: Install kubelogin
-        run: |
-          sudo az aks install-cli  # Installs kubectl
-          curl -Lo kubelogin https://github.com/Azure/kubelogin/releases/download/v0.0.24/kubelogin-linux-amd64.zip
-          unzip kubelogin-linux-amd64.zip -d /usr/local/bin/
-          chmod +x /usr/local/bin/kubelogin
+        uses: azure/use-kubelogin@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          kubelogin-version: 'latest'
         
       - name: Set AKS context
         run: |
