--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -32,6 +32,20 @@ jobs:
       - name: Set up kubelogin for non-interactive login
         run: |
           kubelogin convert-kubeconfig -l azurecli
+          
+      - name: Install ASO using Helm
+        run: |
+          helm repo add aso2 https://raw.githubusercontent.com/Azure/azure-service-operator/main/v2/charts
+          helm repo update
+          helm install azure-service-operator aso2/azure-service-operator \
+            --create-namespace \
+            --namespace aso-system \
+            --set crds.enabled=true \
+            --set azure.subscriptionID=${{ secrets.AZURE_SUBSCRIPTION_ID }} \
+            --set azure.tenantID=${{ secrets.AZURE_TENANT_ID }} \
+            --set azure.clientID=${{ secrets.AZURE_CLIENT_ID }} \
+            --set azure.clientSecret=${{ secrets.AZURE_CLIENT_SECRET }}
+            --set crdPattern='resources.azure.com/*;containerservice.azure.com/*;keyvault.azure.com/*;managedidentity.azure.com/*;eventhub.azure.com/*;documentdb.azure.com/*'
 
       - name: Apply K8 manifests
         run: |
