--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install Cert Manager using Helm
         run: |
           helm repo add jetstack https://charts.jetstack.io --force-update
-          helm install cert-manager jetstack/cert-manager \
+          helm upgrade --install cert-manager jetstack/cert-manager \
             --namespace cert-manager \
             --create-namespace \
             --set crds.enabled=true
@@ -45,7 +45,7 @@ jobs:
         run: |
           helm repo add aso2 https://raw.githubusercontent.com/Azure/azure-service-operator/main/v2/charts
           helm repo update
-          helm install azure-service-operator aso2/azure-service-operator \
+          helm upgrade --install azure-service-operator aso2/azure-service-operator \
             --create-namespace \
             --namespace aso-system \
             --set crds.enabled=true \
