--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -51,6 +51,28 @@ jobs:
             --set crds.enabled=true \
             --set crdPattern='resources.azure.com/*;containerservice.azure.com/*;keyvault.azure.com/*;managedidentity.azure.com/*;eventhub.azure.com/*;documentdb.azure.com/*'
 
+      - name: Set environment variables
+        run: |
+          export AZURE_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSRIPTION_ID }}
+          export AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}
+          export AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}
+          export AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}
+          
+      - name: Add ASO config
+        run: |
+          cat <<EOF | kubectl apply -f -
+            apiVersion: v1
+            kind: Secret
+            metadata:
+              name: aso-credential
+              namespace: default
+            stringData:
+              AZURE_SUBSCRIPTION_ID: "$AZURE_SUBSCRIPTION_ID"
+              AZURE_TENANT_ID: "$AZURE_TENANT_ID"
+              AZURE_CLIENT_ID: "$AZURE_CLIENT_ID"
+              AZURE_CLIENT_SECRET: "$AZURE_CLIENT_SECRET"
+              EOF
+        
       - name: Apply K8 manifests
         run: |
           kubectl apply -f workflows/aso.yml
