--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -60,7 +60,7 @@ jobs:
             name: aso-credential
             namespace: azure-resources
           stringData:
-            AZURE_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSRIPTION_ID }}"
+            AZURE_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
             AZURE_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
             AZURE_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
             AZURE_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
