--- a/workflows/aso.yml
+++ b/workflows/aso.yml
@@ -1,7 +1,7 @@
 apiVersion: resources.azure.com/v1api20200601
 kind: ResourceGroup
 metadata:
-  name: test-k8
+  name: test-k8-rg
   namespace: aso-system
 spec:
   location: canadaeast
