--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -59,10 +59,13 @@ jobs:
         run: |
           kubectl -n aso-system get all
 
-      - name: Build API images
-        run: |
-          docker build -f K8Test/Dockerfile .
-          docker build -f K8OtherAPI/Dockerfile .
+      - name: Build K8Test image
+        working-directory: K8Test
+        run: docker build -t K8TestApi .
+          
+      - name: Build K8OtherApi image
+        working-directory: K8OtherAPI
+        run: docker build -f K8OtherAPI/Dockerfile .
           
       - name: Deploy API manifests
         run: |
