fix resource group and docker

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -64,8 +64,8 @@ jobs:
         run: docker build -t k8test-api .
           
       - name: Build K8OtherApi image
-        working-directory: k8other-api
-        run: docker build -f K8OtherAPI/Dockerfile .
+        working-directory: K8OtherAPI
+        run: docker build -t k8other-api .
           
       - name: Deploy API manifests
         run: |
