Adjsut K8OtherAPI dockerfile

--- a/K8OtherAPI/Dockerfile
+++ b/K8OtherAPI/Dockerfile
@@ -7,10 +7,10 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["K8OtherAPI/K8OtherAPI.csproj", "K8OtherAPI/"]
-RUN dotnet restore "K8OtherAPI/K8OtherAPI.csproj"
+COPY ["K8OtherAPI.csproj", "./"]
+RUN dotnet restore "K8OtherAPI.csproj"
 COPY . .
-WORKDIR "/src/K8OtherAPI"
+WORKDIR "/src/"
 RUN dotnet build "K8OtherAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
