--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -78,5 +78,6 @@ jobs:
       - name: Deploy API manifests
         run: |
           kubectl apply -f workflows/deployments.yml
+          kubectl apply -f workflows/services.yml
           
     
